Refined UI of empty class page blank state

--- a/www/templates/tab-classpage.html
+++ b/www/templates/tab-classpage.html
@@ -10,9 +10,10 @@
     
     <div ng-if="hasCourseSelected && !hasContent">
       <div class="blankStateMessage">
+        <img src="img/oh-no.png" />
         <p>
-          This class page does not have any content.<br />
-          If you are a student in this class, let your teacher know you're ready to study with LinguaZone!
+          The teacher has not set up this class page yet.<br />
+          If you are a student in this class, let your teacher know<br /> you are ready to study with LinguaZone!
         </p>
       </div>
     </div>
