--- a/www/css/style.css
+++ b/www/css/style.css
@@ -7,6 +7,22 @@
   color: #ff6600;
 }
 
+#reviewWordList {
+  max-width: 700px;
+  margin: 0px auto;
+}
+#reviewWordList > h1 {
+  text-align: center;
+}
+#reviewWordList table {
+  border-collapse: collapse;
+  margin: 0px auto;
+}
+#reviewWordList td {
+  border: 1px solid #999;
+  padding: 5px;
+}
+
 .audio_comment {
   padding: 5px;
   margin: 10px 0px;
