--- a/www/css/style.css
+++ b/www/css/style.css
@@ -11,7 +11,7 @@
   max-width: 700px;
   margin: 0px auto;
 }
-#reviewWordList > h1 {
+#reviewWordList h1 {
   text-align: center;
 }
 #reviewWordList table {
