--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -12,7 +12,7 @@
       <span class="formFeedbackError" ng-show="error">
         {{error}}
       </span>
-      <button type="submit" class="button button-block button-calm">Login</button>
+      <button type="submit" class="button button-block button-balanced">Login</button>
     </form>
   </ion-content>
 </ion-view>
