--- a/www/templates/new-registration.html
+++ b/www/templates/new-registration.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Find a class page" ng-controller="RegistrationCtrl">
-  <ion-content>
+  <ion-content class="padding">
 
     <div class="card">
       <div class="item item-divider">Browse for your class</div>
