--- a/www/templates/review-word-list.html
+++ b/www/templates/review-word-list.html
@@ -1,13 +1,11 @@
 <ion-view view-title="Study a word list" ng-controller="ReviewWordListCtrl">
-  <ion-content>
-    <div id="reviewWordList">
-      <h1>{{list.description}}</h1>
-      <table>
-        <tr ng-repeat="node in nodes">
-          <td>{{node.question._content}}</td>
-          <td>{{node.response._content}}</td>
-        </tr>
-      </table>
-    </div>
+  <ion-content class="padding" id="reviewWordList">
+    <h1>{{list.description}}</h1>
+    <table>
+      <tr ng-repeat="node in nodes">
+        <td>{{node.question._content}}</td>
+        <td>{{node.response._content}}</td>
+      </tr>
+    </table>
   </ion-content>
 </ion-view>
