--- a/www/templates/school-show.html
+++ b/www/templates/school-show.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Select your class" ng-controller="SchoolShowCtrl">
-  <ion-content>
+  <ion-content class="padding">
   
     <div class="card">
       <div class="item item-divider">All classes at {{school.name}}</div>
