--- a/www/templates/state-show.html
+++ b/www/templates/state-show.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Select your school" ng-controller="StateShowCtrl">
-  <ion-content>
+  <ion-content class="padding">
   
     <div class="card">
       <div class="item item-divider">All schools in {{state.name}}</div>
