Added ng-cloak to elements to avoid flickering while loading.

--- a/www/templates/new-registration.html
+++ b/www/templates/new-registration.html
@@ -3,7 +3,7 @@
 
     <div class="card">
       <div class="item item-divider">Browse for your class</div>
-      <div class="item item-text-wrap">
+      <div class="item item-text-wrap" ng-cloak>
         <div>
           <ion-list>
             <ion-item ng-repeat="state in domestic" ui-sref="app.state-show({stateId: state.id})">
