--- a/www/templates/play-game.html
+++ b/www/templates/play-game.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Play a game!" ng-controller="PlayGameCtrl">
   <ion-content id="lgzPlayContent" class="padding">
     
-    <div ng-show="ag.game.activity.html5_compatible">    
+    <div ng-show="ag.game.activity.html5_compatible" ng-cloak>    
       <h1>Play {{ag.game.activity.name}}</h1>
       <!--
       <h3>GameId: {{ag.game_id}}</h3>
