--- a/www/templates/review-word-list.html
+++ b/www/templates/review-word-list.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Study a word list" ng-controller="ReviewWordListCtrl">
-  <ion-content class="padding" id="reviewWordList">
+  <ion-content class="padding" id="reviewWordList" ng-cloak>
     <h1>{{list.description}}</h1>
     <table>
       <tr ng-repeat="node in nodes">
