--- a/www/templates/view-post.html
+++ b/www/templates/view-post.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Audio blog post" ng-controller="ViewPostCtrl">
-  <ion-content class="padding">
+  <ion-content class="padding" ng-cloak>
     <h1 id="audioBlogPostTitle">{{post.title}}</h1>
     <div>
       <h2>{{post.content}}</h2>
