--- a/www/templates/school-show.html
+++ b/www/templates/school-show.html
@@ -2,8 +2,8 @@
   <ion-content class="padding">
   
     <div class="card">
-      <div class="item item-divider">All classes at {{school.name}}</div>
-      <div class="item item-text-wrap">
+      <div class="item item-divider" ng-cloak>All classes at {{school.name}}</div>
+      <div class="item item-text-wrap" ng-cloak>
         <ion-list>
           <ion-item ng-repeat="course in courses" ng-click="addClassPage(course)">
             {{course.name}} <small>with {{course.user.display_name}}</small>
