--- a/www/templates/state-show.html
+++ b/www/templates/state-show.html
@@ -2,8 +2,8 @@
   <ion-content class="padding">
   
     <div class="card">
-      <div class="item item-divider">All schools in {{state.name}}</div>
-      <div class="item item-text-wrap">
+      <div class="item item-divider" ng-cloak>All schools in {{state.name}}</div>
+      <div class="item item-text-wrap" ng-cloak>
         <ion-list>
           <ion-item ng-repeat="school in schools" ui-sref="app.school-show({schoolId: school.id})">
             {{school.name}} <small>in {{school.city}}</small>
