--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -5,7 +5,7 @@
       <div class="item item-divider">
         Account info
       </div>
-      <div class="item item-text-wrap" ng-show="user.uid">
+      <div class="item item-text-wrap" ng-show="user.uid" ng-cloak>
         <div>
           {{student.info.display_name}}<br />
           <em>{{student.info.email}}</em>
@@ -15,12 +15,12 @@
           Sign out of your account <i class="icon ion-log-out"></i>
         </button>
       </div>
-      <div class="item item-text-wrap" ng-show="!user.uid">
+      <div class="item item-text-wrap" ng-show="!user.uid" ng-cloak>
         <button class="button button-clear button-balanced" ui-sref="app.login">
           <i class="icon ion-log-in"></i> Sign in to your account
         </button>
       </div>
-      <div class="item item-text-wrap" ng-show="!user.uid">
+      <div class="item item-text-wrap" ng-show="!user.uid" ng-cloak>
         <button class="button button-clear button-balanced" ui-sref="app.new-user">
           <i class="icon ion-ios-plus-outline"></i> Create a LinguaZone.com account
         </button>
@@ -41,7 +41,8 @@
       <!-- TODO: Registrations should sort in order of when the registration was created. Currently not working. -->
       <label class="item item-radio" 
               ng-repeat="reg in student.registrations track by $index | orderBy : sortRegistration(reg) : true"
-              ng-click="visitClassPage(reg.course.id)">
+              ng-click="visitClassPage(reg.course.id)"
+              ng-cloak>
         <div class="item-content">
           {{reg.course.name}}<br />
           taught by {{reg.course.user.display_name}}<br />
@@ -49,7 +50,7 @@
         </div>
       </label>
       
-      <div ng-if="recentCourses.length > 0">
+      <div ng-if="recentCourses.length > 0" ng-cloak>
         <div class="item item-divider">
           Recently viewed classes
         </div>
