--- a/www/templates/tab-classpage.html
+++ b/www/templates/tab-classpage.html
@@ -1,5 +1,5 @@
 <ion-view view-title="{{title}}" ng-controller="ClassPageCtrl">
-  <ion-content class="padding">
+  <ion-content class="padding" ng-cloak>
     
     <div ng-if="!hasCourseSelected && !hasContent">
       <div id="welcomeMessage" class="blankStateMessage">
