--- a/www/templates/tab-recent.html
+++ b/www/templates/tab-recent.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Your recent activity" ng-controller="RecentCtrl">
-  <ion-content class="padding">
+  <ion-content class="padding" ng-cloak>
     
     <div ng-if="!hasUser && !hasActivity">
       <div class="blankStateMessage">
