--- a/www/templates/new-registration.html
+++ b/www/templates/new-registration.html
@@ -13,7 +13,7 @@
         </div>
         <div class="item-divider">International</div>
         <ion-list>
-          <ion-item ng-repeat="country in intl">
+          <ion-item ng-repeat="country in intl" ui-sref="app.state-show({stateId: country.id})">
             {{country.name}}
           </ion-item>
         </ion-list>
