--- a/www/css/style.css
+++ b/www/css/style.css
@@ -40,3 +40,13 @@ span.formFeedbackError {
   border-top: 1px solid red;
   color: red;
 }
+
+div#spinnerOverlay {
+  background-color: black;
+  position: fixed;
+  left:0;
+  top:0;
+  height:100%;
+  width:100%;
+  opacity: 0.3;
+}
