--- a/www/templates/play-game.html
+++ b/www/templates/play-game.html
@@ -8,7 +8,7 @@
       <h3>UserId: {{playerId}}</h3>
       <h3>HTML5: {{ag.game.activity.html5_compatible}}</h1>
       -->
-      <div style="">
+      <div>
         <iframe id="lgzFrame" src userid="{{playerId}}" gameid="{{ag.game_id}}" gameswf="{{ag.game.activity.swf}}" height="425" width="600" frameBorder="0" ></iframe>
       </div>
     </div>
