--- a/www/templates/play-game.html
+++ b/www/templates/play-game.html
@@ -4,12 +4,12 @@
     <div ng-show="ag.game.activity.html5_compatible == 1" >    
       <h1>Play {{ag.game.activity.name}}</h1>
       <!--
-      <h3>GameId: {{ag.game_id}}</h3>
+      <h3>GameId: {{ag.id}}</h3>
       <h3>UserId: {{playerId}}</h3>
       <h3>HTML5: {{ag.game.activity.html5_compatible}}</h1>
       -->
       <div>
-        <iframe id="lgzFrame" src userid="{{playerId}}" gameid="{{ag.game_id}}" gameswf="{{ag.game.activity.swf}}" height="425" width="600" frameBorder="0" ></iframe>
+        <iframe id="lgzFrame" src userid="{{playerId}}" gameid="{{ag.id}}" gameswf="{{ag.game.activity.swf}}" height="425" width="600" frameBorder="0" ></iframe>
       </div>
     </div>
     
