branch: fix_iphoneview_2a desc: Followup code changes in lz-app to properly handle screen sizing for landscape and portrait games in both iphone and ipad devices
Requires corresponding branch (fix_iphoneview_2a) to be merged into
lz-games.
Note that kconf.js, lib.js and msgframe.js have been removed from lz-app
git, as these are obtained from lz-games git at build time.

Use copygamejs.sh to copy these files from the build of lz-games prior
to runing the ionic commmand to compile the app.

--- a/www/templates/play-game.html
+++ b/www/templates/play-game.html
@@ -3,14 +3,8 @@
     
     <div ng-show="ag.game.activity.html5_compatible == 1" >    
       <h1>Play {{ag.game.activity.name}}</h1>
-      <!--
-      <h3>GameId: {{ag.id}}</h3>
-      <h3>UserId: {{playerId}}</h3>
-      <h3>HTML5: {{ag.game.activity.html5_compatible}}</h1>
-     600x425
-      -->
-      <div id="lgzGameDiv">
-        <iframe id="lgzFrame" src userid="{{playerId}}" gameid="{{ag.id}}" gameswf="{{ag.game.activity.swf}}"  ></iframe>
+      <div id="lgzFrameWrap">
+        <iframe id="lgzFrame" allowfullscreen="true" src userid="{{playerId}}" gameid="{{ag.id}}" gameswf="{{ag.game.activity.swf}}"  ></iframe>
       </div>
     </div>
     
